--- a/src/app/components/Header/Header.css
+++ b/src/app/components/Header/Header.css
@@ -7,6 +7,12 @@
     font-weight: 400;
 }
 
+.logo-content {
+    color: #000;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
 .menu-items {
     display: flex;
     justify-content: space-between;
