--- a/src/app/components/ProductsList/ProductsList.css
+++ b/src/app/components/ProductsList/ProductsList.css
@@ -17,3 +17,11 @@
 .p-products .ProductLink {
     text-decoration: none;
 }
+
+.products-page-header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem 0;
+}
