--- a/src/app/components/ProductContent/ProductContent.css
+++ b/src/app/components/ProductContent/ProductContent.css
@@ -1,13 +1,19 @@
 .ProductContent {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     padding-top: 30px;
 }
 
+.ProductContent .ProductSection {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 .ProductContent img {
-    width: 350px;
-    height: 350px;
+    width: 380px;
+    height: 380px;
     margin-right: 30px;
 }
 
@@ -27,4 +33,47 @@
 .ProductContent .p-button {
     background: #000000;
     border: 1px solid #000000;
+}
+
+.CommentsSection {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 30px;
+}
+
+.p-rating .p-rating-icon.pi-star-fill {
+    color: #000;
+}
+
+.Comment {
+    max-width: 600px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 0px 20px;
+    margin-bottom: 10px;
+}
+
+small {
+    margin-left: 10px;
+    font-weight: 100;
+    font-size: 13px;
+    color: #555353;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 10px 20px;
+}
+
+.form-group label {
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+.form-group .p-inputtextarea {
+    margin-bottom: 10px;
 }
