--- a/src/app/components/Header/Header.css
+++ b/src/app/components/Header/Header.css
@@ -36,3 +36,15 @@
     color: #535353;
     margin-top: -10px;
 }
+
+.total {
+    font-size: 10px;
+    font-weight: bold;
+    color: #fff;
+    background: #000;
+    padding: 0.5px 5.5px;
+    border-radius: 50%;
+    cursor: pointer;
+    margin-right: -56px;
+    z-index: 1;
+}
