Se cambió el Scrollbar por un incrementador/decrementador que tiene como mínimo 1 producto y como máximo el stock disponible

--- a/src/app/components/ProductContent/ProductContent.css
+++ b/src/app/components/ProductContent/ProductContent.css
@@ -26,8 +26,8 @@
     font-weight: bold;
 }
 
-.ProductContent .p-dropdown {
-    margin-right: 10px;
+.ProductContent .HorizontalBar {
+    margin-right: 15px;
 }
 
 .ProductContent .p-button {
