Se cambió el Scrollbar por un incrementador/decrementador que tiene como mínimo 1 producto y como máximo el stock disponible, además se ajustó el botón para que fuera más pequeño

--- a/src/app/components/ProductContent/ProductContent.css
+++ b/src/app/components/ProductContent/ProductContent.css
@@ -3,6 +3,8 @@
     flex-direction: column;
     justify-content: space-between;
     padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 30px;
 }
 
 .ProductContent .ProductSection {
