--- a/src/app/components/ProductContent/ProductContent.css
+++ b/src/app/components/ProductContent/ProductContent.css
@@ -49,7 +49,7 @@
 }
 
 .Comment {
-    max-width: 600px;
+    min-width: 600px;
     border: 1px solid #ccc;
     border-radius: 10px;
     padding: 0px 20px;
