--- a/src/app/components/ProductContent/ProductContent.css
+++ b/src/app/components/ProductContent/ProductContent.css
@@ -1,90 +1,95 @@
 .ProductContent {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    padding-left: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 30px;
 }
 
 .ProductContent .ProductSection {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .ProductContent img {
-    width: 380px;
-    height: 380px;
-    margin-right: 30px;
+  width: 380px;
+  height: 380px;
+  margin-right: 30px;
 }
 
 .ProductContent .Description {
-    color: #555353;
+  color: #555353;
+}
+
+.ProductContent .Id {
+  margin-top: -20px;
+  color: #555353;
 }
 
 .ProductContent .Price {
-    font-size: 20px;
-    font-weight: bold;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .ProductContent .HorizontalBar {
-    margin-right: 15px;
+  margin-right: 15px;
 }
 
 .ProductContent .p-button {
-    background: #000000;
-    border: 1px solid #000000;
+  background: #000000;
+  border: 1px solid #000000;
 }
 
 .CommentsSection {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding-top: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-top: 30px;
 }
 
 .p-rating .p-rating-icon.pi-star-fill {
-    color: #000;
+  color: #000;
 }
 
 .Comment {
-    min-width: 600px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 0px 20px;
-    margin-bottom: 10px;
+  min-width: 600px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 0px 20px;
+  margin-bottom: 10px;
 }
 
 .Comments .allCommentsButton {
-    transition: 0.1s;
+  transition: 0.1s;
 }
 
-.Comments .allCommentsButton:hover{
-    cursor: pointer;
-    font-weight: bold;
+.Comments .allCommentsButton:hover {
+  cursor: pointer;
+  font-weight: bold;
 }
 
 small {
-    margin-left: 10px;
-    font-weight: 100;
-    font-size: 13px;
-    color: #555353;
+  margin-left: 10px;
+  font-weight: 100;
+  font-size: 13px;
+  color: #555353;
 }
 
 .form-group {
-    display: flex;
-    flex-direction: column;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 10px 20px;
 }
 
 .form-group label {
-    margin-top: 10px;
-    margin-bottom: 5px;
+  margin-top: 10px;
+  margin-bottom: 5px;
 }
 
 .form-group .p-inputtextarea {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
