--- a/src/app/views/OrderPage/OrderPage.css
+++ b/src/app/views/OrderPage/OrderPage.css
@@ -3,11 +3,10 @@
 }
 
 .OrderPage .FormStyle {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
 }
