--- a/src/app/components/OrderForm/OrderForm.css
+++ b/src/app/components/OrderForm/OrderForm.css
@@ -1,20 +1,20 @@
 .Login-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
-.Login-container input {
-    width: 300px;
-    margin-bottom: 10px;
+.Login-container .p-inputtext {
+  width: 300px;
+  margin-bottom: 15px;
 }
 
-.Login-container button {
-    width: 300px;
-    margin-bottom: 10px;
-    background-color: black;
+.Login-container .p-button {
+  width: 300px;
+  margin-bottom: 20px;
+  background-color: black;
+  border: none;
 }
