--- a/src/app/components/LoginForm/LoginForm.css
+++ b/src/app/components/LoginForm/LoginForm.css
@@ -1,19 +1,62 @@
-.Login-container {
+.Login {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
 }
 
-.Login-container input {
+.login-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 400px;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: left;
     width: 300px;
+    margin-bottom: 20px;
+}
+
+.Label {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.form-group input {
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    padding: 0 10px;
     margin-bottom: 10px;
 }
 
-.Login-container button {
+.submit-form {
     width: 300px;
-    margin-bottom: 10px;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    background-color: #0d0c0e;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
 }
+
+.submit-form:hover {
+    background-color: #911296;
+    transition: 0.2s;
+    color: #fff;
+}
+
+.link {
+    text-align: center;
+    color: #080708;
+    font-weight: bold;
+    margin-top: 20px;
+    text-decoration: none;
+}
+
