--- a/src/app/components/ProductsList/ProductsList.css
+++ b/src/app/components/ProductsList/ProductsList.css
@@ -1,27 +1,36 @@
 .plist-top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.5rem 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 0;
+}
+
+.all-products-link {
+  text-align: left;
+  color: #080708;
+  font-size: 18px;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
 }
 
 .p-products {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .p-products .ProductLink {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .products-page-header {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.5rem 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 0;
 }
