--- a/src/app/components/Header/Header.css
+++ b/src/app/components/Header/Header.css
@@ -1,51 +1,58 @@
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1000px;
-    min-width: 1000px;
-    font-family: 'DM Sans', sans-serif;
-    font-weight: 400;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1000px;
+  min-width: 1000px;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 400;
 }
 
-.logo-content {
-    color: #000;
-    font-size: 1.5rem;
-    font-weight: bold;
+.header .logo .logo-content {
+  color: #000;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 .menu-items {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .menu-items * {
-    margin-left: 30px;
-    cursor: pointer;
+  margin-left: 30px;
+  cursor: pointer;
+}
+
+.menu-items .link {
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  margin-top: -1px;
 }
 
 .p-sidebar h2 {
-    font-size: 24px;
-    font-weight: bold;
-    color: #000;
+  font-size: 24px;
+  font-weight: bold;
+  color: #000;
 }
 
 .p-sidebar p {
-    font-size: 16px;
-    font-weight: 400;
-    color: #535353;
-    margin-top: -10px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #535353;
+  margin-top: -10px;
 }
 
 .total {
-    font-size: 10px;
-    font-weight: bold;
-    color: #fff;
-    background: #000;
-    padding: 0.5px 5.5px;
-    border-radius: 50%;
-    cursor: pointer;
-    margin-right: -56px;
-    z-index: 1;
+  font-size: 10px;
+  font-weight: bold;
+  color: #fff;
+  background: #000;
+  padding: 0.5px 5.5px;
+  border-radius: 50%;
+  cursor: pointer;
+  margin-right: -56px;
+  z-index: 1;
 }
