--- a/src/app/components/Header/Header.css
+++ b/src/app/components/Header/Header.css
@@ -9,7 +9,7 @@
   font-weight: 400;
 }
 
-.header .logo .logo-style{
+.header .logo .logo-style {
   width: 65px;
   height: 65px;
 }
@@ -55,4 +55,9 @@
   cursor: pointer;
   margin-right: -56px;
   z-index: 1;
+}
+
+.dashboardButton * {
+  margin: 0;
+  padding: 0;
 }
