--- a/src/app/components/LoginForm/LoginForm.css
+++ b/src/app/components/LoginForm/LoginForm.css
@@ -1,4 +1,5 @@
 .Login {
+  height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,16 +28,12 @@
 .Label {
   font-size: 16px;
   font-weight: bold;
-}
-
-.form-group input {
-  height: 40px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  padding: 0 10px;
+  margin-bottom: 5px;
 }
 
 .submit-form {
+  display: flex;
+  justify-content: center;
   width: 300px;
   height: 40px;
   border-radius: 5px;
