--- a/src/app/views/OrderPage/OrderPage.css
+++ b/src/app/views/OrderPage/OrderPage.css
@@ -1,3 +1,10 @@
+.OrderPage .wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .OrderPage .Footer {
   margin-top: 20%;
 }
@@ -6,7 +13,12 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+  justify-content: space-between;
   width: 100%;
   height: 100%;
   padding: 20px;
+}
+
+.FormStyle .ProductsCart {
+  width: 50%;
 }
