--- a/src/app/components/Footer/Footer.css
+++ b/src/app/components/Footer/Footer.css
@@ -4,3 +4,10 @@
     align-items: center;
     padding: 10px;
 }
+
+@media (max-width: 600px) {
+    .Footer {
+        font-size: 0.6rem;
+    }
+}
+    
