--- a/src/app/components/BannerGallery/BannerGallery.css
+++ b/src/app/components/BannerGallery/BannerGallery.css
@@ -32,3 +32,76 @@
 .p-galleria .p-galleria-caption {
     background: transparent;
 }
+
+@media (max-width: 1000px) {
+    .product-data {
+        margin-bottom: 8rem;
+    }
+
+    .p-galleria, .p-galleria img {
+        width: 800px;
+    }
+    .product-title {
+        font-size: 2.5rem;
+        margin-top: 1rem;
+    }
+}
+
+@media (max-width: 800px) {
+    .product-data {
+        margin-bottom: 5rem;
+    }
+
+    .p-galleria, .p-galleria img {
+        width: 600px;
+    }
+    .product-title {
+        font-size: 2rem;
+        margin-top: 2rem;
+    }
+}
+
+@media (max-width: 600px) {
+    .product-data {
+        margin-bottom: 3rem;
+    }
+
+    .p-galleria, .p-galleria img {
+        width: 400px;
+    }
+    .product-title {
+        font-size: 1.5rem;
+        margin-top: 3rem;
+    }
+
+    .product-data .p-button-primary {
+        font-size: 0.8rem;
+        padding: 0.5rem 1.5rem;
+    }
+}
+
+@media (max-width: 400px) {
+    .product-data {
+        margin-bottom: 2rem;
+    }
+
+    .p-galleria, .p-galleria img {
+        width: 320px;
+    }
+    .product-title {
+        font-size: 1.2rem;
+        margin-top: 2rem;
+        margin-bottom: 0.1px;
+    }
+
+    .product-price {
+        font-size: 1rem;
+        margin-top: -3px;
+    }
+
+    .product-data .p-button-primary {
+        font-size: 0.6rem;
+        padding: 0.5rem 1rem;
+    }
+}
+
