--- a/src/app/components/OrderForm/OrderForm.css
+++ b/src/app/components/OrderForm/OrderForm.css
@@ -22,3 +22,20 @@
 .saveData {
   margin-bottom: 20px;
 }
+
+@media (max-width: 480px) {
+  .Login-container {
+    width: 100%;
+    height: 100%;
+  }
+  .Login-container .p-inputtext {
+    width: 100%;
+    
+  }
+  .Login-container .p-button {
+    width: 100%;
+  }
+  .saveData {
+    margin-bottom: 0;
+  }
+}
