Se hace el responsive para Order Products y para Products List

--- a/src/app/components/Footer/Footer.css
+++ b/src/app/components/Footer/Footer.css
@@ -10,4 +10,12 @@
         font-size: 0.6rem;
     }
 }
+
+@media (max-width: 400px) {
+    .Footer {
+        font-size: 0.6rem;
+        padding-top: 15%;
+    }
+
+}
     
