--- a/src/app/components/OrderForm/OrderForm.css
+++ b/src/app/components/OrderForm/OrderForm.css
@@ -23,19 +23,65 @@
   margin-bottom: 20px;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 1000px) {
   .Login-container {
-    width: 100%;
-    height: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 70px;
+    min-width: 100%;
   }
   .Login-container .p-inputtext {
-    width: 100%;
-    
+    width: 300px;
+    margin-bottom: 15px;
   }
   .Login-container .p-button {
-    width: 100%;
+    width: 300px;
+    margin-bottom: 20px;
   }
   .saveData {
-    margin-bottom: 0;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 800px) {
+  .Login-container {
+    margin-left: 20px;
+  }
+  .Login-container .p-inputtext {
+    width: 300px;
+    margin-bottom: 15px;
+  }
+  .Login-container .p-button {
+    width: 300px;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 600px) {
+  .Login-container {
+    margin-left: 0;
+  }
+  .Login-container .p-inputtext {
+    width: 300px;
+    margin-bottom: 15px;
+  }
+  .Login-container .p-button {
+    width: 300px;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 400px) {
+  .Login-container .p-inputtext {
+    width: 300px;
+    margin-bottom: 15px;
+  }
+  .Login-container .p-button {
+    width: 300px;
+    margin-bottom: 20px;
+  }
+  .saveData {
+    margin-bottom: 20px;
   }
 }
