--- a/src/app/components/ProductContent/ProductContent.css
+++ b/src/app/components/ProductContent/ProductContent.css
@@ -102,7 +102,7 @@ small {
   margin-bottom: 10px;
 }
 
-@media (max-width: 1000px){
+@media (max-width: 1000px) {
   .ProductContent {
     max-width: 100%;
     min-width: 100%;
@@ -165,10 +165,10 @@ small {
     border: 1px solid #ccc;
     border-radius: 10px;
     padding: 10px 20px;
-}
+  }
 }
 
-@media (max-width: 600px){
+@media (max-width: 600px) {
   .ProductContent {
     padding: 0;
     max-width: 100%;
@@ -179,10 +179,10 @@ small {
     height: 300px;
     margin-right: 0;
   }
-.ProductContent .ProductSection{
-  flex-direction: column;
-  align-items: center;
-}
+  .ProductContent .ProductSection {
+    flex-direction: column;
+    align-items: center;
+  }
 
   .ProductContent .Description {
     color: #555353;
@@ -235,10 +235,10 @@ small {
     border: 1px solid #ccc;
     border-radius: 10px;
     padding: 10px 20px;
-}
+  }
 }
 
-@media (max-width: 400px){
+@media (max-width: 400px) {
   .ProductContent {
     padding: 0;
     max-width: 100%;
@@ -246,8 +246,8 @@ small {
     justify-content: center;
   }
   .ProductContent img {
-    width: 200px;
-    height: 200px;
+    width: 320px;
+    height: 320px;
     margin-right: 0;
   }
   .ProductContent .Description {
@@ -294,5 +294,9 @@ small {
     border: 1px solid #ccc;
     border-radius: 10px;
     padding: 10px 20px;
-}
+  }
+
+  .CommentsSection .CommentForm {
+    margin-bottom: 20px;
+  }
 }
